--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "node": "10.3.0"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "npm install"
   },
   "devDependencies": {
     "discord.js": "^11.4.2"
