mise en place package.json pour deploiement automatique

--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "description": "Bot discord pour afficher les RE/RC/RR",
   "version": "1.0.0",
   "engines": {
-    "node": "10.3.0"
+    "node": "8.11.3",
+    "npm": "6.1.x"
   },
   "scripts": {
-    "start": "node server.js",
-    "build": "npm install"
+    "start": "node server.js"
   },
   "devDependencies": {
     "discord.js": "^11.4.2"
