--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
+    "dateformat": "^3.0.3",
     "discord.js": "^11.4.2",
     "node-fetch": "^2.3.0",
     "supervisor": "^0.12.0"
