--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "discord-ogame-bot",
-  "version": "1.0.0",
+  "version": "0.5.6",
   "description": "",
   "main": "server.js",
   "dependencies": {
     "dateformat": "^3.0.3",
     "discord.js": "^11.4.2",
+    "grunt-bump": "^0.8.0",
+    "grunt-conventional-changelog": "^6.1.0",
     "node-fetch": "^2.3.0",
     "supervisor": "^0.12.0"
   },
